--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "type": "module",
-  "dependencies": {
-    "@supabase/supabase-js": "^2.39.5"
-  }
+  "name": "framer-chatbot-api",
+  "dependencies": {}
 }
